--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "register-service-worker": "^1.6.2",
+    "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-class-component": "^7.2.2",
-    "vue-property-decorator": "^8.3.0",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-plugin-pwa": "^4.2.3",
@@ -29,8 +29,8 @@
     "@vue/eslint-config-typescript": "^5.0.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "typescript": "~3.7.5",
+    "eslint-plugin-vue": "^6.2.2",
+    "typescript": "^3.8.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
