--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "leaflet": "^1.6.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.2.0",
+    "vue-class-component": "^7.2.5",
+    "vue-property-decorator": "^8.5.1",
+    "vue-router": "^3.3.4",
+    "vue2-leaflet": "^2.5.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -30,7 +32,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "typescript": "^3.9.3",
+    "typescript": "^3.9.7",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
