--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,9 +6,9 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -33,4 +33,4 @@ jobs:
         git config --local user.name "GitHub Action"
         git add -f docs
         git commit -m "Deploy CI"
-        git push origin master
+        git push origin main
